bugfix: header wraps on mobile

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,11 +1,7 @@
-#head-navbar {
-  width: 100%;
-  display: inline-block;
-}
 .nav>li {
   position: relative;
   display: inline-block;
-  padding-left: 15px;
+  padding-left: 10px;
 }
 ul.navbar-nav{
   position: relative;
